--- a/Projeto 4 bimestre/WpfApp1/AlterarConta.xaml
+++ b/Projeto 4 bimestre/WpfApp1/AlterarConta.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="AlterarConta" Height="403.361" Width="328.571" Foreground="White">
+        Title="AlterarConta" Height="334.361" Width="328.571" Foreground="White">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -13,19 +13,22 @@
                 <GradientStop Color="#FF2252D1" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <TextBlock HorizontalAlignment="Left" Margin="27,30,0,0" TextWrapping="Wrap" Text="Crie sua conta na Lan Master" VerticalAlignment="Top" FontSize="18"/>
+        <TextBlock Width="0" Height="0"  x:Name="TypeAccount" Foreground="Transparent"/>
+        <TextBlock Width="0" Height="0" x:Name="IdAccount" Foreground="Transparent"/>
+        <TextBlock HorizontalAlignment="Left" Margin="27,30,0,0" TextWrapping="Wrap" Text="Alterar conta" VerticalAlignment="Top" FontSize="18"/>
+        <RadioButton Foreground="White" x:Name="cliente" Content="Cliente" HorizontalAlignment="Left" Margin="27,59,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="funcionario" Foreground="White" Content="Funcionário" HorizontalAlignment="Left" Margin="108,59,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="administrador" Foreground="White" Content="Administrador" HorizontalAlignment="Left" Margin="210,59,0,0" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,79,0,0" TextWrapping="Wrap" Text="Nome" VerticalAlignment="Top"/>
         <TextBox x:Name="nomeConta" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,134,0,0" TextWrapping="Wrap" Text="E-mail" VerticalAlignment="Top"/>
         <TextBox x:Name="emailConta" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,155,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,190,0,0" TextWrapping="Wrap" Text="Senha" VerticalAlignment="Top"/>
         <TextBox x:Name="senhaConta" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,211,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Margin="27,243,0,0" TextWrapping="Wrap" Text="Confirmar senha" VerticalAlignment="Top"/>
-        <TextBox x:Name="confSenha" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,264,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="214,122,0,0" VerticalAlignment="Top" Width="100"/>
-        <Button Background="Transparent" Content="Inserir foto" HorizontalAlignment="Left" Margin="220,264,0,0" VerticalAlignment="Top" Width="84" Foreground="White" FontSize="16" Height="23" BorderBrush="White"/>
-        <Button Background="Transparent" Content="Calcelar" HorizontalAlignment="Left" Margin="27,334,0,0" VerticalAlignment="Top" Width="75" Foreground="White" BorderBrush="White" Click="Button_Cancelar"/>
-        <Button Background="Transparent" Content="Concluir" HorizontalAlignment="Left" Margin="230,334,0,0" VerticalAlignment="Top" Width="74" Foreground="White" BorderBrush="White" Click="Button_NewAccount"/>
+        <Image HorizontalAlignment="Left" Height="100" Margin="204,100,0,0" VerticalAlignment="Top" Width="100"/>
+        <Button Background="Transparent" Content="Inserir foto" HorizontalAlignment="Left" Margin="220,211,0,0" VerticalAlignment="Top" Width="84" Foreground="White" FontSize="16" Height="23" BorderBrush="White"/>
+        <Button Background="Transparent" Content="Calcelar" HorizontalAlignment="Left" Margin="27,267,0,0" VerticalAlignment="Top" Width="75" Foreground="White" BorderBrush="White" Click="Button_Cancelar"/>
+        <Button Background="Transparent" Content="Alterar" HorizontalAlignment="Left" Margin="230,267,0,0" VerticalAlignment="Top" Width="74" Foreground="White" BorderBrush="White" Click="Button_AlterarConta"/>
 
     </Grid>
 </Window>
