--- a/Projeto 4 bimestre/WpfApp1/Inscricao.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Inscricao.xaml
@@ -15,13 +15,13 @@
         </Grid.Background>
         <TextBlock HorizontalAlignment="Left" Margin="27,30,0,0" TextWrapping="Wrap" Text="Crie sua conta na Lan Master" VerticalAlignment="Top" FontSize="18"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,79,0,0" TextWrapping="Wrap" Text="Nome" VerticalAlignment="Top"/>
-        <TextBox x:Name="nomeConta" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="nomeConta" Foreground="White" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,134,0,0" TextWrapping="Wrap" Text="E-mail" VerticalAlignment="Top"/>
-        <TextBox x:Name="emailConta" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,155,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="emailConta" Foreground="White" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,155,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,190,0,0" TextWrapping="Wrap" Text="Senha" VerticalAlignment="Top"/>
-        <TextBox x:Name="senhaConta" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,211,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="senhaConta" Foreground="White" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,211,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,243,0,0" TextWrapping="Wrap" Text="Confirmar senha" VerticalAlignment="Top"/>
-        <TextBox x:Name="confSenha" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,264,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="confSenha" Foreground="White" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,264,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Image HorizontalAlignment="Left" Height="100" Margin="214,122,0,0" VerticalAlignment="Top" Width="100"/>
         <Button Background="Transparent" Content="Inserir foto" HorizontalAlignment="Left" Margin="220,264,0,0" VerticalAlignment="Top" Width="84" Foreground="White" FontSize="16" Height="23" BorderBrush="White"/>
         <Button Background="Transparent" Content="Calcelar" HorizontalAlignment="Left" Margin="27,334,0,0" VerticalAlignment="Top" Width="75" Foreground="White" BorderBrush="White" Click="Button_Cancelar"/>
